# loc

./: .gitignore  CMakeLists.txt  CMakePresets.json  benchmark.py  license.txt  readme.md  vc140.idb  vcpkg.json
.github/scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
.github/workflows/: build-and-test-linux.yml  build-and-test-windows.yml  cmake-multi-platform.yml  release.yml  run-test-suite.yml  upload-release.yml
.kiro/specs/move-impl-to-cpp/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/remove-cpp-modules/: .config.kiro  design.md  requirements.md  tasks.md
loc/: CLineCounter.cpp  CMakeLists.txt  Counter.cpp  DirectoryScanner.cpp  ExpandGlob.cpp  FSLineCounter.cpp  FileReader.cpp  PyLineCounter.cpp  loc.cpp  main.cpp
loc.tests/: CMakeLists.txt  Test_CLineCounter.cpp  Test_Counter.cpp  Test_DirectoryScanner.cpp  Test_ExpandGlob.cpp  Test_FSLineCounter.cpp  Test_PyLineCounter.cpp  Test_XmlLineCounter.cpp
loc.tests/test_files/: cpp_file.cpp  cpp_file2.cpp  fs_file.fs  header.h  py_file.py  xml_file.xml
loc/include/: CLineCounter.h  Counter.h  DirectoryScanner.h  ExpandGlob.h  FSLineCounter.h  FileReader.h  ILineCounter.h  LineCounter.h  PyLineCounter.h  loc.h
loc/src/: Counter.cpp  DirectoryScanner.cpp  FileReader.cpp  LineCounter.cpp  main.cpp
loc/src/Filesystem/: Filesystem.ixx  Filesystem_DirectoryScanner.ixx
loc/src/loc.Counter/: CLineCounter.ixx  Counter.cpp  Counter.h  Counter.ixx  FSLineCounter.ixx  LineCounter.cpp  LineCounter.h  LineCounter.ixx  PyLineCounter.ixx  XmlLineCounter.ixx  loc.Counter.ixx
loc/src/loc.Filesystem/: DirectoryScanner.cpp  DirectoryScanner.h  DirectoryScanner.ixx  ExpandGlob.cpp  ExpandGlob.h  ExpandGlob.ixx  FileReader.h  FileReader.ixx  loc.Filesystem.ixx
